# C-Masm

./: .gitignore  CMakeLists.txt  README.md  common_defs.h  configure.ps1  decoder  extended-mni.md  hello_v2.masm  install_manifest.txt  main.bins  main.cpp  main.masm  main.mb  masm  microasm_compiler.cpp  microasm_compiler.h  microasm_decoder  microasm_decoder.cpp  microasm_interpreter.cpp  microasm_interpreter.h  operand_types.h  readme.md  search_tree_generator.py  test.masmt  usage.md  v2instructions.md
.history/examples/: stack_trace_parse_20250427125847.py
.history/include/: common_defs_20250426120034.h  common_defs_20250427132953.h
.history/src/: microasm_compiler_20250427122702.h  microasm_compiler_20250427124238.cpp  microasm_compiler_20250427133002.h  microasm_compiler_20250427161535.cpp  microasm_compiler_20250427161546.cpp  microasm_compiler_20250427161610.cpp  microasm_compiler_20250427161636.cpp  microasm_compiler_20250427162145.cpp  microasm_compiler_20250427162358.cpp  microasm_compiler_20250427162444.cpp  microasm_compiler_20250427162504.cpp  microasm_compiler_20250427162620.cpp  microasm_compiler_20250427162917.cpp  microasm_interpreter_20250426121521.h  microasm_interpreter_20250426211212.cpp  microasm_interpreter_20250427133003.h  microasm_interpreter_20250427161120.cpp
.history/tests/: build_20250427132600.sh  run_tests_20250427132949.py  run_tests_20250427134448.py  run_tests_20250427134507.py  run_tests_20250427134608.py  run_tests_20250427134614.py  run_tests_20250427134623.py  run_tests_20250427134639.py  run_tests_20250427134807.py  tests_20250427132559.json  tests_20250427133237.json  tests_20250427133354.json  tests_20250427133413.json  tests_20250427133506.json  tests_20250427133537.json  tests_20250427133551.json  tests_20250427133554.json  tests_20250427133606.json  tests_20250427133634.json  tests_20250427133645.json  tests_20250427133854.json  tests_20250427133910.json  tests_20250427133928.json  tests_20250427134150.json
build_linux/: masm
docs/: bytecode-format.md  extended-mni.md  memory_heap.md  mni-instructions.md  v2instructions.md  workflow.md
examples/: advanced_mem.masm  decomp.masm  heap_funnes.masm  includes.masm  main.masm  malloc.masm  stack.dbg  stack_err.masm  stack_trace.masm  stack_trace_parse.py  start_test.masm  test.masm
imgui/: imgui.ini
imgui-debugger/: CMakeLists.txt  imgui.ini  imgui_demo.cpp  imgui_impl_sdlrenderer2.cpp  masm_debugger  masm_debugger.cpp  microasm_decoder copy.cpp
include/: common_defs.h  microasm_interpreter.h
src/: MNI.cpp  MNI.h  common_defs.h  heap.cpp  heap.h  main.cpp  microasm_capi.cpp  microasm_capi.h  microasm_compiler.cpp  microasm_compiler.h  microasm_decoder.cpp  microasm_interpreter.cpp  microasm_interpreter.h  operand_types.h
src/mni/strings/: strings.cpp
stdlib/stdio/: print.mas
testproj/: MicroAsmRuntime.cs  Program.cs  testproj.csproj
tests/: build.sh  create_test_file.sh  run_tests.py  tests.json
tests/code/: builtin_hello.expected  builtin_hello.masm  hello.expected  hello.masm  mem.expected  mem.masm  stack.dbg.expected  stack_trace.expected  stack_trace.masm  thing.masm  very_big_program.expected  very_big_program.masm
